2002-05-01  Glynn Foster  <glynn.foster@sun.com>

	* gnome-system-log-regexp.db: Add fix from 
	 voss@debian.org (Jochen Voss) for #73406.

2002-04-28 Dennis Cranston <dennis_cranston@yahoo.com>

	* about.c:  fix code to correctly find logview.xpm logo
	in the about dialog.  Change name to match application menu.
	Fixes #80109.
	
2002-04-24 Aruna P R <aruna.pou@wipro.com>

	* config.c, info.c, log_repaint.c, logview.c,
	  logview.h, monitor.c, zoom.c:

	Start using Pango wherever we can.

2002-04-18 - John Fleck <jfleck@inkstain.net>

	* help/Makefile.am, help/C/Makefile.am
	gnome-system-log.xml, gnome-system-log-C/omf, legal.xml
	figures/gnome-system-log.png
	incorporating placeholder docs, completing patch from
	Satyajit

2002-04-16  Kevin Vandersloot <kfv101@psu.edu>

        * Makefile.am, logview.c : get help working - almost

2002-03-21 Aruna P R <aruna.pou@wipro.com>

	* logview.c: add session managment to systemlogmoitor

2002-03-30 Aruna P R <aruna.pou@wipro.com>
	
	* actions.c, monitor.c, logview.h:

        Replaced GtkClist and GtkCtree calls with GtkTreeView calls in the files        

2002-03-20  Yogeesh MB <yogeeshappa.mathighatta@wipro.com>

	* logview.c :Removed user preference dialog, Patch #57968

2002-03-26 Aruna P R <aruna.pou@wipro.com>

        * monitor.c: Monitor options gives the messages when tried to add more
        than the MON_MAX_NUM_LOGS(4) log files.
        Fixes the problem with Add and Remove button

        * logview.c: made menu items and view items sensitive.
        Added the condition to give the message when tried to open more than
        MAX_NUM_LOGS(10) log files.

        Fix for bugs #75124 & 75074

2002-03-20  Kevin Vandersloot <kfv101@psu.edu>

	* actions.c: Use gtk_text_buffer_set_text. May fix 
	a crash. Also don't cast the textview to a gtkeditable

2002-03-15  Ganesan Sethuraman <ganesan.sethuraman@wipro.com>

       * log_repaint.c: Fixed the display of the status bar when the