@@ -1,5 +1,10 @@
 2002-05-01  Glynn Foster  <glynn.foster@sun.com>
 
+	* calendar.c: (CalendarMenu): Adapted patch from
+	Xing Wang <quixon@gnuchina.org> to fix #77194.
+
+2002-05-01  Glynn Foster  <glynn.foster@sun.com>
+
 	* gnome-system-log-regexp.db: Add fix from 
 	 voss@debian.org (Jochen Voss) for #73406.
 
